Fix icons, fix transaction list spacing

--- a/staging.css
+++ b/staging.css
@@ -447,6 +447,7 @@ hash {
 
 .blockinfo-transaction-row > hash {
     font-size: 14px;
+    word-spacing: -2px;
 }
 
 .blockinfo-transaction-row > span {
@@ -468,8 +469,16 @@ a.info-icon {
     margin-bottom: -3px;
     background-image: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"/></svg>');
     background-repeat: no-repeat;
-    background-size: contain;
+    background-position: center;
+    border-radius: 50%;
     border-bottom: none;
+    opacity: 0.7;
+}
+
+a.info-icon:hover,
+a.info-icon:focus,
+a.info-icon:active {
+    opacity: 0.9;
 }
 
 .no-more {
